DocImport 1.0.7
================================================================================
# [LOW] Very rarely an empty article would be generated every time you tried processing the DocBook XML files

DocImport 1.0.6
================================================================================
! An annoying –but harmless– fatal error was shown on upgrade from older versions

DocImport 1.0.5
================================================================================
# [LOW] Pre-installation script would run the wrong SQL files on upgrade (normally not causing a problem, but still it's not the intended behavior)
# [LOW] CLI CRON scripts not fully compatible with PHP CGI
# [LOW] Links to index.html are not replaced

DocImport 1.0.4
================================================================================
~ Build refresh for new FOF version

DocImport 1.0.3
================================================================================
~ If the language of a category is not set, the default (all languages) will be set on save
# [MEDIUM] The CLI script produced a fatal error
# [MEDIUM] Issues with multilingual sites
# [MEDIUM] Document generation in the CLI wouldn't get the correct URL to images
# [MEDIUM] Fatal error clearing the SEF URL cache
# [MEDIUM] Missing jimport statement in URL cache model
# [MEDIUM] XML IDs containing underscores and other characters not acceptable in slugs would result in broken links

DocImport 1.0.2
================================================================================
# [HIGH] Internal server error on ancient versions of PHP 5.3 with broken late static binding implementations
# [MEDIUM] Documents with XInclude statements didn't work if the linked XML documents were not web accessible

DocImport 1.0.1
================================================================================
# [HIGH] The component's menu item was removed if the installation couldn't proceed (too low PHP or Joomla! version)