@@ -1,5 +1,6 @@
 DocImport 1.0.7
 ================================================================================
+~ Improved back-end display in Joomla! 3
 # [LOW] Very rarely an empty article would be generated every time you tried processing the DocBook XML files
 
 DocImport 1.0.6
